# arm-control-demo

./: README.md
robot_arm_moveit_config2/: CMakeLists.txt  package.xml
robot_arm_moveit_config2/config/: fake_controllers.yaml  joint_limits.yaml  pilz_cartesian_limits.yaml  robot_arm.srdf
robot_arm_moveit_config2/launch/: demo.launch.py  move_group.launch.py  rsp.launch.py
your_robot_description/: CMakeLists.txt  package.xml
your_robot_description/launch/: display.launch.py
your_robot_description/urdf/: arm.urdf
