<?xml version="1.0"?>
<package format="3">
  <name>robot_arm_moveit_config2</name>
  <version>0.0.1</version>
  <description>MoveIt2 configuration for simple robot arm</description>

  <maintainer email="atharva@example.com">Atharva Santosh</maintainer>
  <author email="atharva@example.com">Atharva Santosh</author>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
  </export>
</package>
